--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,18 +3,19 @@ name = "log-manager"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = []
+
 [dependencies]
 chrono = "0.4.38"
 diesel = {version = "2.2.2", default-features = false, features = ["sqlite", "extras", "32-column-tables"]}
 diesel_migrations = "2.2.0"
-tokio = {version = "1.39.1", default-features = false, features = ["macros", "net", "rt-multi-thread", "time", "signal"]}
-tokio-util = "0.7.11"
-uuid = {version = "1.10.0", features = ["v4", "serde"]}
-peck-lib = {git = "https://github.com/alexipeck/peck-lib.git", features = ["env", "logging", "uid", "datetime"]}
-#libsqlite3-sys = {version = "0.30.1", features = ["bundled"]}
+tokio = {version = "1.39.1", default-features = false, features = ["macros", "rt-multi-thread"]}
+peck-lib = {git = "https://github.com/alexipeck/peck-lib.git", features = ["logging"]}
 serde = {version = "1.0.204", features = ["derive"]}
 serde_json = {version = "1.0.120"}
 thiserror = "1.0.63"
 tracing = "0.1.40"
-tracing-appender = "0.2.3"
+uuid = {version = "1.10.0", features = ["v4", "serde"]}
+tracing-appender = {version = "0.2.3"}
 tracing-subscriber = {version = "0.3.18"}
