--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
+authors = ["Alexi Peck <alexinicolaspeck@gmail.com>"]
 name = "log-manager"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
+
+[lib]
+doctest = false
 
 [features]
 default = []
